k8s/docs.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: signapse
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 1m"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: docs
          image: ghcr.io/vives-project-xp/signapse/docs:8.0.0
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            exec:
              command: ["sh", "-c", "nc -z 127.0.0.1 8000"]
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            exec:
              command: ["sh", "-c", "nc -z 127.0.0.1 8000"]
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
